[#92234070]Increase widget panel animation and fix scrollbar bugs

--- a/assets/stylesheet/app/editionPage/panel.less
+++ b/assets/stylesheet/app/editionPage/panel.less
@@ -11,6 +11,7 @@
     &.col-md-1 {
         #toggle {
             text-align: center;
+            margin-top: 10px;
             span {
                 font-size : 35px;
             }
@@ -25,117 +26,125 @@
         display    : none;
         text-align : center;
         margin-top : 20px;
+        height: 90%;
+
         div {
-            background : #555;
-            color      : #eee;
-            text-align : center;
-            width      : 50px;
-            height     : 50px;
-            margin     : 5px auto;
-            span {
-                .fa;
-                font-size: 25px;
-                line-height: 50px;
 
-                //  For each field we choose an icon
-                //  You can use font-awesome : http://fortawesome.github.io/Font-Awesome/icons/
-                //
-                //  /!\ If you use font awesome take care about your version. Some content value are different on the website and on the css file
-                //
-                //  Or use an other font like renecoFont : http://naturalsolutions.github.io/RenecoFonts/
-                //  Or a background image
-
-                &.iconDateField:before {
-                    content: "\f073";
+            &.scroll {
+                &>div {
+                    background : #555;
+                    color      : #eee;
+                    text-align : center;
+                    width      : 50px;
+                    height     : 50px;
+                    margin     : 5px auto;
                 }
+                span {
+                    .fa;
+                    font-size: 25px;
+                    line-height: 50px;
 
+                    //  For each field we choose an icon
+                    //  You can use font-awesome : http://fortawesome.github.io/Font-Awesome/icons/
+                    //
+                    //  /!\ If you use font awesome take care about your version. Some content value are different on the website and on the css file
+                    //
+                    //  Or use an other font like renecoFont : http://naturalsolutions.github.io/RenecoFonts/
+                    //  Or a background image
 
-                &.iconTextField:before {
-                    content: "\f031";
-                }
-
-                &.iconTextAreaField:before {
-                    content: "\f039";
-                }
-
-                &.iconNumberField:before {
-                    content : '69';
-                }
-
-                &.iconNumericRangeField:before {
-                    content: "\f1de";
-                }
-
-                &.iconPatternField:before{
-
-                }
-
-                &.iconFileField:before {
-                    content: "\f1c2";
-                }
-
-                &.iconTreeViewField:before {
-                    content: "\f1bb";
-                }
-
-                &.iconSubformField {
-                    .reneco !important;
-                    line-height: 50px !important;
-                    &:before {
-                        content: "\e678";
+                    &.iconDateField:before {
+                        content: "\f073";
                     }
-                }
 
-                &.iconThesaurusField {
-                    .reneco !important;
-                    line-height: 50px !important;
-                    &:before {
-                        content: "\e696";
+
+                    &.iconTextField:before {
+                        content: "\f031";
                     }
+
+                    &.iconTextAreaField:before {
+                        content: "\f039";
+                    }
+
+                    &.iconNumberField:before {
+                        content : '69';
+                    }
+
+                    &.iconNumericRangeField:before {
+                        content: "\f1de";
+                    }
+
+                    &.iconPatternField:before{
+
+                    }
+
+                    &.iconFileField:before {
+                        content: "\f1c2";
+                    }
+
+                    &.iconTreeViewField:before {
+                        content: "\f1bb";
+                    }
+
+                    &.iconSubformField {
+                        .reneco !important;
+                        line-height: 50px !important;
+                        &:before {
+                            content: "\e678";
+                        }
+                    }
+
+                    &.iconThesaurusField {
+                        .reneco !important;
+                        line-height: 50px !important;
+                        &:before {
+                            content: "\e696";
+                        }
+                    }
+
+                    &.iconAutocompleteTreeViewField:before {
+
+                    }
+
+                    &.iconHiddenField:before {
+                        content: "\f070";
+                    }
+
+                    &.iconHorizontalLineField:before {
+                        content: "\f068";
+                    }
+
+                    &.iconAutocompleteField:before {
+
+                    }
+
+                    &.iconCheckBoxField:before {
+                        content: "\f046";
+                    }
+
+                    &.iconRadioField:before {
+                        content: "\f192";
+                    }
+
+                    &.iconSelectField:before {
+                        content: "\f150";
+                    }
+
                 }
-
-                &.iconAutocompleteTreeViewField:before {
-
-                }
-
-                &.iconHiddenField:before {
-                    content: "\f070";
-                }
-
-                &.iconHorizontalLineField:before {
-                    content: "\f068";
-                }
-
-                &.iconAutocompleteField:before {
-
-                }
-
-                &.iconCheckBoxField:before {
-                    content: "\f046";
-                }
-
-                &.iconRadioField:before {
-                    content: "\f192";
-                }
-
-                &.iconSelectField:before {
-                    content: "\f150";
-                }
-
             }
         }
     }
 
 
 
-    .scroll {
+    /*.scroll {
         position: relative;
         overflow: hidden;
         height: 90%;
         margin-top: 5%;
-    }
+    }*/
 
     #toggle {
+        margin-top: 10px;
         span {
             font-size : 30px;
             z-index: 255;
@@ -182,7 +191,7 @@
         label {
             .exo;
             color         : #555;
-            font-size     : 18px;
+            font-size     : 16px;
             transition : all 0.1s ease-in;
         }
 
